--- a/.github/workflows/godot-build-windows.yml
+++ b/.github/workflows/godot-build-windows.yml
@@ -7,9 +7,10 @@ on:
 jobs:
   build-windows:
     runs-on: ubuntu-latest
+Godot_v3.6.2-stable_mono_export_templates.tpz
 
     env:
-      GODOT_VERSION: 4.3
+      GODOT_VERSION: 4.5
       EXPORT_NAME: game.exe
 
     steps:
@@ -25,8 +26,8 @@ jobs:
       - name: Descargar Godot headless y export templates
         run: |
           GODOT_VERSION=${GODOT_VERSION}
-          wget https://github.com/godotengine/godot-builds/releases/download/${GODOT_VERSION}-stable/Godot_v${GODOT_VERSION}-stable_linux_headless.64.zip
-          wget https://github.com/godotengine/godot-builds/releases/download/${GODOT_VERSION}-stable/Godot_v${GODOT_VERSION}-stable_export_templates.tpz
+          wget https://github.com/godotengine/godot-builds/releases/download/3.6.2-stable/Godot_v3.6.2-stable_linux_headless.64.zip
+          wget https://github.com/godotengine/godot-builds/releases/download/3.6.2-stable/Godot_v3.6.2-stable_export_templates.tpz
           unzip Godot_v${GODOT_VERSION}-stable_linux_headless.64.zip -d ~/godot
           mkdir -p ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable/
           unzip Godot_v${GODOT_VERSION}-stable_export_templates.tpz -d ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable/
