--- a/.github/workflows/godot-build-windows.yml
+++ b/.github/workflows/godot-build-windows.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      GODOT_VERSION: 4.5
+      GODOT_VERSION: 3.6.2
       EXPORT_NAME: game.exe
 
     steps:
@@ -29,18 +29,18 @@ jobs:
           wget https://github.com/godotengine/godot-builds/releases/download/3.6.2-stable/Godot_v3.6.2-stable_export_templates.tpz
           unzip Godot_v${GODOT_VERSION}-stable_linux_headless.64.zip -d ~/godot
           mkdir -p ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable/
-          unzip Godot_v${GODOT_VERSION}-stable_export_templates.tpz -d ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable/
+          unzip Godot_v3.6.2-stable_export_templates.tpz -d ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable/
 
 
       - name: Dar permisos
-        run: chmod +x ~/godot/Godot_v${GODOT_VERSION}-linux_headless.64
+        run: chmod +x ~/godot/Godot_v3.6.2-stable_linux_headless.64.zip
 
       - name: Crear carpeta de build
         run: mkdir -p build/windows
 
       - name: Exportar a Windows (.exe)
         run: |
-          ~/godot/Godot_v${GODOT_VERSION}-linux_headless.64 \
+          ~/godot/Godot_v3.6.2-stable_linux_headless.64.zip \
             --headless \
             --verbose \
             --export-release "Windows Desktop" build/windows/${EXPORT_NAME}
